# rustbox

./: Cargo.toml
src/: game.rs  main.rs
src/euler/: 01_multiples_of_three_or_five.rs  02_even_fibonacci.rs  03_largest_prime_factor.rs  04_largest_three_digit_palindrome.rs
