[package]
name = "rustbox"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.8.0", features = ["dynamic"] }
rand = "0.8.5"
text_io = "0.1.12"

# NOTES
# 
# - use Camera2dBundle::default() instead of OrthographicCameraBundle::new_2d() if you are getting "failed to resolve: use of undeclared type `OrthographicCameraBundle`"